# astra

./: .coverage  .gitignore  README.md  a2a_server.py  generate_docs.py  main.py  newsletter.html  pyproject.toml  run_dynamic_workflow.py  run_workflow_loop_test.py  run_workflow_math_parallel.py  run_workflow_math_seq.py  run_workflow_parallel_research.py  run_workflow_research_loop.py
astra_framework/: README.md  a2a_server.py  main.py  manager.py  pyproject.toml  topics_cancer copy.json
astra_framework/agents/: dynamic_workflow_agent.py  llm_agent.py  loop_agent.py  parallel_agent.py  react_agent.py  sequential_agent.py
astra_framework/builders/: workflow_builder.py
astra_framework/core/: agent.py  models.py  state.py  tool.py  workflow_models.py
astra_framework/services/: base_client.py  client_factory.py  gemini_client.py  ollama_client.py  tavily_client.py
astra_framework/utils/: prompt_loader.py
documents/: mkdocs.yml
documents/docs/: Feature.md  PROMPT_OPTIMIZER.md  a2a_server.md  agent.md  architecture copy.md  architecture.md  base_client.md  client_factory.md  design_patterns.md  design_patterns_suggestions.md  dynamic_workflow_agent.md  main.md  (+18 more)
tests/: editorial_output.json  generated_from_json_newsletter.html  test_agent.py  test_base_client.py  test_dynamic_workflow_agent.py  test_gemini_client.py  test_html_generator.py  test_llm_agent.py  test_loop_agent.py  test_manager.py  test_models.py  test_newsletter_output.html  test_ollama_client.py  test_parallel_agent.py  test_sequential_agent.py  test_state.py  test_tavily_client.py  test_tool.py
(+19 files in other folders)
