[project]
name = "astra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "pydantic>=2.12.3",
    "unicorn>=2.1.4",
    "ollama>=0.2.1",
    "ruff>=0.14.2",
    "radon>=6.0.1",
    "arize-phoenix>=3.1.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "openinference-instrumentation>=0.1.41",
    "tavily-python>=0.7.12",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astra_framework*"]
exclude = ["documents*", "examples*"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "examples/research_workflows"
]
